# arpespythontools

./: .gitignore  404.html  CNAME  Dockerfile  LICENSE  README.md  __init__.py  docusaurus.config.js  index.html  mkdocs.yml  netlify.toml  package-lock.json  package.json  pyproject.toml  requirements.txt  search-index.json  sidebars.js  sitemap.xml  test.py  tests.py  wrangler.toml
.devcontainer/: devcontainer.json  postCreateCommands.sh
.github/workflows/: deploy-gh-pages.yml  deploy.yml  publish.yml  python-tests.yml
assets/css/: styles.0e0d4115.css  styles.0f9ded47.css  styles.12e41ae6.css  styles.162b22c2.css  styles.1a575e6e.css  styles.213bc0b9.css  styles.22637ac5.css  styles.266876a0.css  styles.2826b857.css  styles.28554f39.css  styles.2a75f4c5.css  styles.3037bb7d.css  styles.3f635a49.css  styles.40bb3b28.css  styles.45a786e7.css  styles.494404f6.css  styles.4d9fc4eb.css  styles.52e600a9.css  styles.6333e308.css  styles.63e9dc10.css  styles.73b74415.css  styles.76fed1db.css  styles.7b39b99b.css  styles.7c2facbf.css  styles.903b1ebe.css  styles.992bd6f5.css  styles.99637adf.css  styles.9a0de9be.css  styles.9b73b74a.css  styles.a0b7be81.css  styles.a1c94888.css  styles.ac2c8432.css  styles.ac673f66.css  styles.b3ea6d71.css  styles.b4de8e86.css  styles.b69e88cd.css  styles.baccafd3.css  styles.bd11c859.css  styles.cb1d477d.css  styles.cb5691e4.css  (+17 more)
assets/js/: 01fc7af5.1fe72b57.js  01fc7af5.32826ad2.js  01fc7af5.3fea8650.js  01fc7af5.4555411a.js  01fc7af5.497dac4d.js  01fc7af5.4a285d4b.js  01fc7af5.553b42c2.js  01fc7af5.5aa6ac09.js  01fc7af5.5ce54c36.js  01fc7af5.5fdbbc7e.js  01fc7af5.6001442a.js  01fc7af5.6aa03bc5.js  01fc7af5.78d251b8.js  01fc7af5.84f2cd0d.js  01fc7af5.86aaf4c9.js  01fc7af5.88be422f.js  01fc7af5.89181653.js  01fc7af5.899d1fc5.js  01fc7af5.9b8de04e.js  01fc7af5.cb2e106c.js  01fc7af5.d93eb1dd.js  01fc7af5.de0a2b4a.js  01fc7af5.e3bfa9aa.js  01fc7af5.f3bcc5ce.js  0d593180.05137f3b.js  0d593180.05be31dd.js  0d593180.06749e32.js  0d593180.14dae81e.js  0d593180.23263bd6.js  0d593180.3167e503.js  0d593180.35d2a5fd.js  0d593180.38752edd.js  0d593180.4d0552f8.js  0d593180.4d801cf1.js  0d593180.5e19813c.js  0d593180.781ba034.js  0d593180.8907cc0f.js  (+605 more)
blog/: index.html
docs/: crop.md  data-import.md  data_import.md  enhancements.md  getting-started.md  glossary.md  gs.md  igor-text.md  igor.md  image-plot.md  image_plot.md  index.html  index.md  k-conv.md  k_conv.md  license.md  line-profile.md  modules.md  plane-slice.md  plane_slice.md  rotate.md  visualization.md  xps.md
myreadthedocs/: breadcrumbs.html  footer.html
notebooks/: Plots.ipynb  examples.ipynb  hands-on.ipynb  laplacian.ipynb  multiprocessing.ipynb
search/: index.html
site/: 404.html  index.html  search.html  sitemap.xml
source/: __init__.py  crop_2d.py  export_itx.py  import_itx.py  k_conv.py  k_conv3D.py  load_ses_map.py  load_ses_spectra.py  plane_slice.py  rotate.py
src/: __init__.py  crop_2d.py  custom_loader_one.py  cv2d.py  export_itx.py  import_itx.py  k_conv.py  k_conv3D.py  k_conv3d.py  k_conv3d_mp.py  k_conv3d_mp_alt.py  laplacian.py  line_profile.py  load_ses_map.py  load_ses_spectra.py  plane_slice.py  rotate.py  rotate_2D.py  rotate_2d.py  rotate_3D.py  rotate_3d.py  rotate_deprecated.py  rotate_parallel.py  save_xps.py  utils.py
tests/: tests.py
(+50 files in other folders)
