[project]
name = "arpespythontools"
version = "1.3.0"
description = "Explore, analyze, visualize Angle Resolved Photoemission Spectroscopy (ARPES) data."
authors = [{ name = "Pranab Das" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10,<4.0"
keywords = [
    "arpes",
    "condensed-matter-physics",
    "data-analysis",
    "materials-science",
    "matplotlib",
    "photoelectron-spectroscopy",
    "python",
    "surface-science",
]

dependencies = [
    "astropy>=6.1.7; python_version < '3.14'",
    "astropy>=7.2.0rc2; python_version >= '3.14'",
    "matplotlib>=3.10.5",
    "numpy>=2.2.6",
    "psutil>=7.0.0",
    "scipy>=1.15.3",
]

[project.optional-dependencies]
lint = [
    "autopep8>=2.3.1",
]

notebook = [
    "jupyterlab>=4.4.5",
]

[project.urls]
homepage = "https://pranabdas.github.io/arpespythontools/"
repository = "https://github.com/pranabdas/arpespythontools"
documentation = "https://pranabdas.github.io/arpespythontools/docs/"

[tool.poetry]
requires-poetry = ">=2.0"

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"
